--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,11 @@
+<!--
+  --
+  -- @author
+  --   Gerardo Jaramillo (https://gerardojaramillo.dev)
+  --
+  -- index.html
+  -->
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -8,7 +16,7 @@
 </head>
 
 <body>
-
+    <div id="map"></div>
 </body>
 
 </html>
